@@ -1,0 +1,20 @@
+﻿
+Microsoft Visual Studio Solution File, Format Version 10.00
+# Visual Studio 2008
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "DlrHelloExpressions", "DlrHelloExpressions.csproj", "{AE3AA4D5-D97E-4A04-97E9-05FAFA4D0D9F}"
+EndProject
+Global
+	GlobalSection(SolutionConfigurationPlatforms) = preSolution
+		Debug|Any CPU = Debug|Any CPU
+		Release|Any CPU = Release|Any CPU
+	EndGlobalSection
+	GlobalSection(ProjectConfigurationPlatforms) = postSolution
+		{AE3AA4D5-D97E-4A04-97E9-05FAFA4D0D9F}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{AE3AA4D5-D97E-4A04-97E9-05FAFA4D0D9F}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{AE3AA4D5-D97E-4A04-97E9-05FAFA4D0D9F}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{AE3AA4D5-D97E-4A04-97E9-05FAFA4D0D9F}.Release|Any CPU.Build.0 = Release|Any CPU
+	EndGlobalSection
+	GlobalSection(SolutionProperties) = preSolution
+		HideSolutionNode = FALSE
+	EndGlobalSection
+EndGlobal
